[package]
name = "container-runtime"
version = "0.1.0"
edition = "2021"
authors = ["ptlap <ptlap4338@gmail.com>"]
description = "A minimal OCI-compliant container runtime written in Rust"
license = "MIT"

[[bin]]
name = "crun"
path = "src/main.rs"

[lib]
name = "container_runtime"
path = "src/lib.rs"

[dependencies]
nix = { version = "0.31", features = [
  "process",
  "mount",
  "sched",
  "user",
  "fs",
] }
oci-spec = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "startup"
harness = false

[profile.release]
opt-level = 3
lto = true
